--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" />
   <package id="Microsoft.NETCore.Targets" version="1.1.0" />
+  <package id="WebSocketSharp-netstandard" version="1.0.1" />
 </packages>
